--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <title>Moody</title>
 
 </head>
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body>
+<section id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
   <!-- Navigation -->
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand page-scroll" href="#page-top">
-          <i class="fa fa-hashtag"></i> <span class="light">Moody</span>
+          <i class="fa fa-arrow-up"></i> <span class="light"> Moody</span>
         </a>
       </div>
     </div>
@@ -60,12 +60,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h1 style="font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;" class="brand-heading">
-              <span style="color: #0074D9">M</span>
-              <span style="color:#01FF70">O</span>
-              <span style="color:#FF851B">O</span>
-              <span style="color:#FFDC00">D</span>
-              <span style="color:#7FDBFF">Y</span></h1>
+            <h1 style="font-family: 'Joti One', cursive; color:white;" class="brand-heading">
+              Moody</h1>
             <p class="intro-text">
               Show me your mood and I'll try to match it
             </p>
@@ -77,7 +73,7 @@
       </div>
     </div>
   </header>
-  
+  </section>
   <!-- Upload photo Section -->
   <section id="upload" class="container content-section text-center">
     <div class="container camera">
@@ -116,7 +112,8 @@
   </section>
 
   <!-- Google voice -->
-  <section id="voice" class="container results-section text-center">
+  <section id="voice" class="container results-section text-center" style="  color: black;
+                    background-color:#DDDDDD;">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Lets talk about it</h2>
