--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,16 +32,13 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Moody</title>
 
 </head>
 <body>
-<section id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
-
+<section id="page-top">
   <!-- Navigation -->
   <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container">
@@ -112,8 +108,7 @@
   </section>
 
   <!-- Google voice -->
-  <section id="voice" class="container results-section text-center" style="  color: black;
-                    background-color:#DDDDDD;">
+  <section id="voice" class="container results-section text-center">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Lets talk about it</h2>
@@ -146,7 +141,7 @@
     </div>
     </div>
   </section>
-
+</body>
   <!-- Footer -->
   <footer>
     <div class="container text-center">
@@ -154,7 +149,6 @@
     </div>
   </footer>
 
-</body>
 
 
 </html>
